--- a/app/design/frontend/rwd/custom/template/homepopup/homepopup.phtml
+++ b/app/design/frontend/rwd/custom/template/homepopup/homepopup.phtml
@@ -4,7 +4,9 @@
         <div class="sk_popup_close">+</div>
         <p class="popup_title"><?php echo $this->getTitle(); ?></p>
         <p class="popup_msg"><span><?php echo $this->getMessage(); ?></span></p>
-        <p class="dont_show_again"><input type="checkbox" id="dont_show_popup" name="dont_show_again" /><span>Não mostrar novamente</span></p>        
+        <p class="dont_show_again"><input type="checkbox" id="dont_show_popup" name="dont_show_again" />
+            <span><?php echo $this->__("Don't show this again."); ?></span>
+        </p>
     </div>
     <script type="text/javascript">
         /* Retira de dentro do Main-Container para sobrepor o layout responsivo */
