--- a/app/design/frontend/rwd/custom/template/page/html/head.phtml
+++ b/app/design/frontend/rwd/custom/template/page/html/head.phtml
@@ -34,9 +34,9 @@
 <meta name="description" content="<?php echo htmlspecialchars($this->getDescription()) ?>" />
 <meta name="keywords" content="<?php echo htmlspecialchars($this->getKeywords()) ?>" />
 <meta name="robots" content="<?php echo htmlspecialchars($this->getRobots()) ?>" />
-<meta property="og:image" content="<?php echo $this->getSkinUrl('images/logo.png'); ?>" />
 <meta property="og:title" content="<?php echo Mage::app()->getStore()->getName(); ?>" />
-<meta property="og:description" content="<?php echo " "; ?>" />
+<meta property="og:image" content="<?php echo $this->getSkinUrl('images/logo.png'); ?>" />
+<meta property="og:description" content="<?php echo "Este site é apenas para testes."; ?>" />
 <link rel="icon" href="<?php echo $this->getFaviconFile(); ?>" type="image/x-icon" />
 <link rel="shortcut icon" href="<?php echo $this->getFaviconFile(); ?>" type="image/x-icon" />
 <link href='http://fonts.googleapis.com/css?family=Noto+Sans:400,700&ampsubset=latin,cyrillic-ext' rel='stylesheet' type='text/css' />
