--- a/app/design/frontend/rwd/custom/template/page/html/head.phtml
+++ b/app/design/frontend/rwd/custom/template/page/html/head.phtml
@@ -35,7 +35,7 @@
 <meta name="keywords" content="<?php echo htmlspecialchars($this->getKeywords()) ?>" />
 <meta name="robots" content="<?php echo htmlspecialchars($this->getRobots()) ?>" />
 <meta property="og:title" content="<?php echo Mage::app()->getStore()->getName(); ?>" />
-<meta property="og:image" content="<?php echo $this->getSkinUrl('images/logo.png'); ?>" />
+<meta property="og:image" content="<?php echo $this->getSkinUrl('images/fb_logo.png'); ?>" />
 <meta property="og:description" content="<?php echo "Este site é apenas para testes."; ?>" />
 <link rel="icon" href="<?php echo $this->getFaviconFile(); ?>" type="image/x-icon" />
 <link rel="shortcut icon" href="<?php echo $this->getFaviconFile(); ?>" type="image/x-icon" />
